--- a/docs/bachelorproef.tex
+++ b/docs/bachelorproef.tex
@@ -67,11 +67,14 @@
 	\input{subsec-aem}
 	\input{publisher}
 	\input{dispatcher}
-	\newpage
 	\input{eerste-project}
-	\newpage
 	\input{pagina-genereren}
-	%\input{java-calls}
+	\input{request-filter}
 	\input{server-side-includes}
+	\input{javascript}
+	\newpage
+	\input{conclusie}
+	\newpage
+	\input{bronvermelding}
 	%\input{java-script}
 \end{document}
