--- a/docs/database-sub-cassandra.tex
+++ b/docs/database-sub-cassandra.tex
@@ -27,7 +27,7 @@
 	Bij een factor 3 zal elk record op 3 noden beschikbaar zijn. 
 	Des te groter de factor, des te groter de performantie en stabiliteit maar ook de duplicatie aan data vergroot mee.
 	Bij het kiezen van de replicatiefactor moet er een afweging gemaakt worden tussen niveau van beschikbaarheid en
-	het extra geheugen dat de replicatie vereist.
+	de extra load veroorzaakt door het schrijven naar meerdere noden.
 	\par
 	Een groot verschil met een relationele databank is dat het linken van verscheidene tabellen niet mogelijk is.
 	In plaats daarvan werkt Cassandra met collecties die rechtstreeks in een kolom worden opgeslagen. 
